--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,1 +1,1 @@
-jdbcUrl=jdbc:h2:mem:test;INIT=runscript from '~/projects/hibernate-lab/src/main/sql/schema.sql'\\;runscript from '~/projects/hibernate-lab/src/main/sql/data.sql'
+jdbcUrl=jdbc:h2:mem:test;INIT=runscript from 'src/main/sql/schema.sql'\\;runscript from 'src/main/sql/data.sql'
